delete redundant methods
